--- a/odin-links-and-image/index.html
+++ b/odin-links-and-image/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1>Homepage</h1>
-    <img src="media/Profile Pic 1M.png">
+    <img src="media/Profile Pic 1M.png" width="270">
     <h2>What's New?</h2>
     <!--Test Comment-->
     <h3>Anything?
