--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <h1>Homepage</h1>
-    <img src="odin-links-and-image/media/Profile Pic 1M.png" width="270">
+    <img src="media/Profile Pic 1M.png" width="270">
     <h2>What's New?</h2>
     <!--Test Comment-->
     <h3>Anything?
@@ -23,9 +23,9 @@
         <li>Butter</li>
     </ul>
     <h3>Other Links</h3>
-    <a href="odin-links-and-image/pages/blog.html">Blog</a>
+    <a href="pages/blog.html">Blog</a>
     <p></p>
-    <a href="odin-links-and-image/pages/about.html">About</a>
+    <a href="pages/about.html">About</a>
     </p>
 </body>
 
