CSS lesson practice #1

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
     <title>UPcareera</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        p {
+            color: white;
+            background-color: green;
+            font-size: 18px;
+        }
+    </style>
 
 </head>
 
@@ -11,17 +19,23 @@
 
     <h1>Homepage</h1>
     <img src="media/Profile Pic 1M.png" width="270">
-    <h2>What's New?</h2>
+    <div class="Headers">
+        <h2>What's New?</h2>
+    </div>
     <!--Test Comment-->
     <h3>Anything?
     </h3>
     <p><em><strong>Hello</strong></em></p>
+    <p>Is it a good day for you today?</p>
+    <p>Nice!</p>
 
     <p>
     <ul>
         <li>Bread</li>
         <li>Butter</li>
+
     </ul>
+    <button type="button" style="background-color: orange; font-size: 18px">Buy Me A Taco!</button>
     <h3>Other Links</h3>
     <a href="pages/blog.html">Blog</a>
     <p></p>
