--- a/index.html
+++ b/index.html
@@ -5,20 +5,14 @@
     <title>UPcareera</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <style>
-        p {
-            color: white;
-            background-color: green;
-            font-size: 18px;
-        }
-    </style>
+
 
 </head>
 
 <body>
 
     <h1>Homepage</h1>
-    <img src="media/Profile Pic 1M.png" width="270">
+    <img id="me-image" src="media/Profile Pic 1M.png" width="270">
     <div class="Headers">
         <h2>What's New?</h2>
     </div>
@@ -41,6 +35,17 @@
     <p></p>
     <a href="pages/about.html">About</a>
     </p>
+
+    <p class="odd">I am odd 1 p</p>
+    <div id="eventwo">I am even 2 div</div>
+    <p class=" odd extra">i am add 3 p</p>
+    <div id="evenfour">i am even 4 div</div>
+    <div class="odd five">I am odd 5 div</div>
+    <p id="even-six">i am a even 6 p</p>
+
+
+
+
 </body>
 
 </html>
