--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <p><em><strong>Hello</strong></em></p>
     <p>Is it a good day for you today?</p>
     <p>Nice!</p>
+    <button type="button" class="clicky one">Click Me!</button>
+    <button class="clicky two">No, Click Me!</button>
+    <button type="button" class="clicky three" onclick="alert('You are fired, Fred!')">Don't Click Me!</button>
+
 
     <p>
     <ul>
@@ -29,7 +33,8 @@
         <li>Butter</li>
 
     </ul>
-    <button type="button" style="background-color: orange; font-size: 18px">Buy Me A Taco!</button>
+    <button type="button" style="background-color: orange; font-size: 18px"
+        onclick="alert('Thank you for the 10 tacos!')">Buy Me A Taco!</button>
     <h3>Other Links</h3>
     <a href="pages/blog.html">Blog</a>
     <p></p>
