Other work done

--- a/index.html
+++ b/index.html
@@ -5,33 +5,42 @@
     <title>UPcareera</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <style class="background">
+        body {
+            background-color: rgba(255, 233, 215, 0.947);
+        }
+    </style>
 
 
 </head>
 
 <body>
 
-    <h1>Homepage</h1>
-    <img id="me-image" src="media/Profile Pic 1M.png" width="270">
     <div class="Headers">
-        <h2>What's New?</h2>
+        <h2>~~~ Unreadable Blog ~~~</h2>
     </div>
+    <!--Image on the top-->
+    <img id="me-image" src="media/Profile Pic 1M.png" width="270">
+
     <!--Test Comment-->
-    <h3>Anything?
+    <h3>Welcome my reader to this unbelivable unreadable blog!
+        It is guaranteed by this website that
+        your time will be wasted for an ablsutelly rediculos blog
+        you have ever seen.
+        <p>Congradulations!</p>
     </h3>
-    <p><em><strong>Hello</strong></em></p>
-    <p>Is it a good day for you today?</p>
-    <p>Nice!</p>
+    <!--pictures of sold parts-->
+    <h3>These items have been sold!</h3>
+    <img class="proportioned item1" src="media/item1.png" alt="item one">
+    <img class="proportioned item2" src="media/item2.png" alt="item two">
+    <img class="original item1" src="media/item1.png" alt="item one">
+    <img class="original item2" src="media/item2.png" alt="item two">
+    <!-- Buttons pactice -->
+    <h3>Some buttons to try for you:</h3>
     <button type="button" class="clicky one">Click Me!</button>
     <button class="clicky two">No, Click Me!</button>
     <button type="button" class="clicky three" onclick="alert('You are fired, Fred!')">Don't Click Me!</button>
-
-
-    <p>
-    <ul>
-        <li>Bread</li>
-        <li>Butter</li>
-
+    <p></p>
     </ul>
     <button type="button" style="background-color: orange; font-size: 18px"
         onclick="alert('Thank you for the 10 tacos!')">Buy Me A Taco!</button>
@@ -41,12 +50,38 @@
     <a href="pages/about.html">About</a>
     </p>
 
+    <!--other practices-->
+    <h3>Other useless stuff that you maight enjoy, or not.</h3>
+    <!-- Different texts -->
     <p class="odd">I am odd 1 p</p>
     <div id="eventwo">I am even 2 div</div>
     <p class=" odd extra">i am add 3 p</p>
     <div id="evenfour">i am even 4 div</div>
     <div class="odd five">I am odd 5 div</div>
     <p id="even-six">i am a even 6 p</p>
+
+    <!-- Descendant Combinator -->
+
+
+    <div class="parent">
+        <p class="text">This line is styled</p>
+    </div>
+    <p class="text">this line is not styled</p>
+    <p class="text">this line is not styled as well</p>
+    <div class="parent">
+        <p class="text">This line is styled</p>
+        <p class="text">This line is styled</p>
+    </div>
+
+
+
+
+
+
+
+
+
+
 
 
 
