foundation is complete

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
     <img class="proportioned item2" src="media/item2.png" alt="item two">
     <img class="original item1" src="media/item1.png" alt="item one">
     <img class="original item2" src="media/item2.png" alt="item two">
+
+
     <!-- Buttons pactice -->
+
     <h3>Some buttons to try for you:</h3>
+
     <button type="button" class="clicky one">Click Me!</button>
     <button class="clicky two">No, Click Me!</button>
     <button type="button" class="clicky three" onclick="alert('You are fired, Fred!')">Don't Click Me!</button>
-    <p></p>
-    </ul>
     <button type="button" style="background-color: orange; font-size: 18px"
         onclick="alert('Thank you for the 10 tacos!')">Buy Me A Taco!</button>
     <h3>Other Links</h3>
@@ -49,6 +51,7 @@
     <p></p>
     <a href="pages/about.html">About</a>
     </p>
+
 
     <!--other practices-->
     <h3>Other useless stuff that you maight enjoy, or not.</h3>
@@ -73,8 +76,17 @@
         <p class="text">This line is styled</p>
     </div>
 
+    <!-- CSS Methods -->
+    <p class="para">I'm just a simple paragraph!</p>
+    <p class="para small-para">I'm a smaller paragraph!</p>
 
+    <button id="confirm-button" class="button confirm">Confirm</button>
+    <button id="cancel-button" class="button cancel">Cancel</button>
 
+    <div class="text">I'm not related to those divs down there.</div>
+    <div class="text">I have a child!
+        <div class="text child">My ancestor is so embarrassing.</div>
+    </div>
 
 
 
