final website edits

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <!--other practices-->
     <h3>Other useless stuff that you maight enjoy, or not.</h3>
     <!-- Different texts -->
-    <p class="odd">I am odd 1 p</p>
-    <div id="eventwo">I am even 2 div</div>
+    <a class="odd">I am odd 1 p</a>
+    <a id="eventwo">I am even 2 div</a>
     <p class=" odd extra">i am add 3 p</p>
     <div id="evenfour">i am even 4 div</div>
     <div class="odd five">I am odd 5 div</div>
