played with flexbox

--- a/index.html
+++ b/index.html
@@ -1,103 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <img src="logo/upcareera_logo_2.svg" class="logo" alt="" />
+        <ul>
+          <li>Home</li>
+          <li>Blog</li>
+          <li>About</li>
+        </ul>
+      </div>
+      <div class="images selfie">
+        <img src="media/Profile Pic 1M.png" />
+      </div>
+      <p>
+        Welcome my reader to this unbelievable unreadable blog! It is guaranteed
+        by this website that your time will be wasted for an ablsutelly
+        ridiculous blog you have ever seen.
+        <span>Congratulations!</span>
+      </p>
 
-<head>
-    <title>UPcareera</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <style class="background">
-        body {
-            background-color: rgba(255, 233, 215, 0.947);
-        }
-    </style>
-
-
-</head>
-
-<body>
-
-    <div class="Headers">
-        <h2>~~~ Unreadable Blog ~~~</h2>
+      <p>These items have been sold!</p>
+      <div class="images sale-items">
+        <img class="proportioned item1" src="media/item1.png" alt="item one" />
+        <img class="proportioned item2" src="media/item2.png" alt="item two" />
+        <img class="original item1" src="media/item1.png" alt="item one" />
+        <img class="original item2" src="media/item2.png" alt="item two" />
+      </div>
+      <div class="footer"><p>Footer</p></div>
     </div>
-    <!--Image on the top-->
-    <img id="me-image" src="media/Profile Pic 1M.png" width="270">
-
-    <!--Test Comment-->
-    <h3>Welcome my reader to this unbelivable unreadable blog!
-        It is guaranteed by this website that
-        your time will be wasted for an ablsutelly rediculos blog
-        you have ever seen.
-        <p>Congradulations!</p>
-    </h3>
-    <!--pictures of sold parts-->
-    <h3>These items have been sold!</h3>
-    <img class="proportioned item1" src="media/item1.png" alt="item one">
-    <img class="proportioned item2" src="media/item2.png" alt="item two">
-    <img class="original item1" src="media/item1.png" alt="item one">
-    <img class="original item2" src="media/item2.png" alt="item two">
-
-
-    <!-- Buttons pactice -->
-
-    <h3>Some buttons to try for you:</h3>
-
-    <button type="button" class="clicky one">Click Me!</button>
-    <button class="clicky two">No, Click Me!</button>
-    <button type="button" class="clicky three" onclick="alert('You are fired, Fred!')">Don't Click Me!</button>
-    <button type="button" style="background-color: orange; font-size: 18px"
-        onclick="alert('Thank you for the 10 tacos!')">Buy Me A Taco!</button>
-    <h3>Other Links</h3>
-    <a href="pages/blog.html">Blog</a>
-    <p></p>
-    <a href="pages/about.html">About</a>
-    </p>
-
-
-    <!--other practices-->
-    <h3>Other useless stuff that you maight enjoy, or not.</h3>
-    <!-- Different texts -->
-    <a class="odd">I am odd 1 p</a>
-    <a id="eventwo">I am even 2 div</a>
-    <p class=" odd extra">i am add 3 p</p>
-    <div id="evenfour">i am even 4 div</div>
-    <div class="odd five">I am odd 5 div</div>
-    <p id="even-six">i am a even 6 p</p>
-
-    <!-- Descendant Combinator -->
-
-
-    <div class="parent">
-        <p class="text">This line is styled</p>
-    </div>
-    <p class="text">this line is not styled</p>
-    <p class="text">this line is not styled as well</p>
-    <div class="parent">
-        <p class="text">This line is styled</p>
-        <p class="text">This line is styled</p>
-    </div>
-
-    <!-- CSS Methods -->
-    <p class="para">I'm just a simple paragraph!</p>
-    <p class="para small-para">I'm a smaller paragraph!</p>
-
-    <button id="confirm-button" class="button confirm">Confirm</button>
-    <button id="cancel-button" class="button cancel">Cancel</button>
-
-    <div class="text">I'm not related to those divs down there.</div>
-    <div class="text">I have a child!
-        <div class="text child">My ancestor is so embarrassing.</div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
+  </body>
 </html>
